--- a/UtilityTools/UtilityTools/packages.config
+++ b/UtilityTools/UtilityTools/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Algorithmia.Client" version="1.0.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.5" targetFramework="net472" />
 </packages>
